<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_info"
            android:title="@string/sobre" />

        <item android:title="@string/compartilhar">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_share"
                        android:icon="@drawable/ic_share_black_24dp"
                        android:title="@string/compartilhar_app" />
                    <item
                        android:id="@+id/nav_contatos"
                        android:icon="@drawable/ic_call"
                        android:title="@string/contatos" />
                    <item
                        android:id="@+id/nav_sair"
                        android:icon="@drawable/ic_power_settings_new_black_24dp"
                        android:title="@string/sair" />
                </group>
            </menu>
        </item>
    </group>
</menu>
